--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,30 @@
-# Data directories
-data/
-cache/
-opt/
-
-# Binary files
+# Data and R files
+data/*
+int/*
+cache/*
+env/*
+opt/*
+output/*
 *.RData
+*.rds
+*.Rhistory
 
-# Documents
+# LaTeX helper files
+*.sty
+*.cls
+*.csl
+*.aux
+*.log
+*.out
+*.synctex.gz
+
+$ Microsoft Office files
 *.docx
 *.pptx
 
-# Environment
-env/
+# Submissions
+doc/module_ewas/past_submissions/*
+*cover_letter*
+
+# Mac-specific
+*.DS_Store
